test/src/e2e_vm_tests/test_programs/should_pass/trait_coherence/trait_coherence_dup/standards/src/standards.sw
library;

pub mod src5;
