test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values/src/main.sw
library;

mod cfg_attr_program_type;
mod cfg_attr_target;